Finally the bearer token can now be stored and called from the cookies to access the restricted api methods. Authorization now works on both sides, MVC & API.

--- a/ECommerceWithAuth.MVC/Views/_ViewImports.cshtml
+++ b/ECommerceWithAuth.MVC/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using ECommerceWithAuth.MVC
 @using ECommerceWithAuth.MVC.Models
+@using DataAccessLibrary.Services.RefitClient;
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
