--- a/ECommerceWithAuth.MVC/Areas/Identity/Pages/Account/Login.cshtml
+++ b/ECommerceWithAuth.MVC/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,25 +5,25 @@
     ViewData["Title"] = "Log in";
 }
 
-<div class="row justify-content-center m-3">
+<div class="row justify-content-center m-3 ">
     <div class="col col-sm-9 col-md-7 col-lg-5 ">
         
             <form id="account" method="post" >
-                <h4>Log in.</h4>
-                <hr />
+                <h3 class="text-center">Log in</h3>
+                <hr  style="max-width: 70%; margin: auto; color:rgb(0, 79, 23); height:2px;" class="mb-3 mt-3"  />
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <div class="form-floating">
+                <div class="form-floating mb-3 mt-3">
                     <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
                     <label asp-for="Input.Email" class="form-label"></label>
                     <span asp-validation-for="Input.Email" class="text-danger"></span>
                 </div>
-                <div class="form-floating">
+                <div class="form-floating mt-3">
                     <input asp-for="Input.Password" class="form-control" autocomplete="current-password" aria-required="true" />
                     <label asp-for="Input.Password" class="form-label"></label>
                     <span asp-validation-for="Input.Password" class="text-danger"></span>
                 </div>
                 <div>
-                    <div class="checkbox">
+                    <div class="checkbox mb-4">
                         <label asp-for="Input.RememberMe" class="form-label">
                             <input class="form-check-input" asp-for="Input.RememberMe" />
                             @Html.DisplayNameFor(m => m.Input.RememberMe)
@@ -33,7 +33,7 @@
                 <div class="m-3 w-100 text-center">
                     <button id="login-submit" type="submit" class="btn btn-lg btn-success  col-8 col-sm-7 col-md-7 col-lg-5">Log in</button>
                 </div>
-                <div class="text-center pt-4 ">
+                <div class="text-center pt-4 invisible ">
                     <p>
                         <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
                     </p>
