--- a/ECommerceWithAuth.MVC/Views/Home/Index.cshtml
+++ b/ECommerceWithAuth.MVC/Views/Home/Index.cshtml
@@ -1,8 +1,13 @@
-﻿@{
+﻿@model object
+
+@{
     ViewData["Title"] = "Home Page";
 }
+
+
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about building Web apps with ASP.NET Core.</p>
+    <p>@Model</p>
 </div>
