--- a/ECommerceWithAuth.MVC/Views/Shared/_Layout.cshtml
+++ b/ECommerceWithAuth.MVC/Views/Shared/_Layout.cshtml
@@ -35,8 +35,8 @@
             </div>
         </nav>
     </header>
-    <div class="container-lg">
-        <main role="main" class="">
+    <div class="pe-4 ps-4 pb-3">
+        <main role="main" style="max-width: 102rem; margin: 0 auto;">
             @RenderBody()
         </main>
     </div>
