--- a/ECommerceWithAuth.MVC/Views/Product/Index.cshtml
+++ b/ECommerceWithAuth.MVC/Views/Product/Index.cshtml
@@ -5,8 +5,9 @@
 }
 
 <div class="row pt-5">
-    <h3 class="text-secondary font-monospace fw-bold col-6">Products [<span 
-                class="text-primary opacity-75 small">@Model?.Count</span>]</h3>
+    <h3 class="text-secondary font-monospace fw-bold col-6">
+        Products [<span class="text-primary opacity-75 small">@Model?.Count</span>]
+    </h3>
     <div class=" text-end">
         <a asp-action="AddProduct" class="btn btn-success mb-4 fw-bold">Add Product</a>
     </div>
@@ -38,34 +39,49 @@ else
             <tbody class="border-1 border-dark">
                 @foreach (var product in Model)
                 {
+
                     <tr>
                         <td class="col-3 fw-bold link-primary">
                             <a class="text-decoration-none btn-outline-info link-primary rounded-pill p-1"
-                               asp-action="productDetails" asp-route-Id="@product.Guid">@product.Name</a>
+                               asp-action="productDetails" asp-route-id="@product.Guid">@product.Name</a>
                         </td>
-                        <td class="col-2">@product.Category!.Name</td>
-                        <td class="col-1 @(product.Quantity <= 10 ? "bg-warning" : "") bg-opacity-25">@product.Quantity</td>
+                        <td class="col-2 fw-bold  text-success">@product.Category!.Name</td>
+                        <td class="col-1 text-secondary fw-bold  @(product.Quantity <= 10 ? "bg-warning" : "") bg-opacity-25">@product.Quantity</td>
+
                         @if (product.OnSale)
                         {
-                            <td class="col-1 fw-bold text-danger text-opacity-75">@($"{product.DiscountRate.ToString():#.}%")</td>
+                            <td class="col-1 fw-bold">
+                                <span class="btn-outline-warning link-primary rounded-pill p-lg-1 p-xl-2
+                                      text-danger text-opacity-75 discountRateModal" title="Click to update"
+                                      onclick="openDiscountRateModal('@JsonConvert.SerializeObject(product)')">
+                                    @($"{(int)product.DiscountRate}%")
+                                </span>
+                            </td>
                         }
                         else
                         {
-                            <td class="col-1  text-opacity-75">Full Price</td>
+                            <td class="col-1 fw-bold text-center">
+                                <span class="btn-outline-warning link-primary rounded-pill p-lg-1 p-xl-2
+                                       discountRateModal" title="Click to update"
+                                      onclick="openDiscountRateModal('@JsonConvert.SerializeObject(product)')">
+                                    Full Price
+                                </span>
+                            </td>
                         }
 
-                        <td class="col-1 fw-bold small @(product.OnSale ? "bg-success bg-opacity-25" : "")">
-                            <a class=" text-decoration-none btn-outline-warning link-primary rounded-pill p-1 "
-                               asp-controller="Book" asp-action="GetBorrowedBooks" asp-route-Id="@product.Guid">
+                        <td class="col-1 fw-bold small @(product.OnSale ? "bg-danger bg-opacity-10" : "")">
+                            <span class="text-decoration-none btn-outline-warning link-primary rounded-pill p-2
+                                  discountUntilModal" title="Click to update" onclick="openDiscountUntilModal('@JsonConvert.SerializeObject(product)')">
                                 @product.DiscountUntil.ToShortDateString()
-                            </a>
+                            </span>
                         </td>
-                        <td class="col-1">@($"{product.Price:#.##}")</td>
-                        <td class="col-1">
+
+                        <td class="col-1 text-secondary fw-bold font-monospace"> @($"{product.GetCurrentPrice():#.##}")</td>
+                        <td class="col-sm-2 col-lg-2 col-xxl-1">
                             <div class="row justify-content-center">
-                                <a asp-action="Updateproduct" asp-route-Id="@product.Guid"
+                                <a asp-action="Updateproduct" asp-route-id="@product.Guid"
                                    class="btn btn-warning rounded-pill w-auto p-1 m-1">Update</a>
-                                <a asp-action="Deleteproduct" asp-route-Id="@product.Guid"
+                                <a asp-action="Deleteproduct" asp-route-id="@product.Guid"
                                    class="btn btn-danger rounded-pill w-auto p-1 m-1">Delete&nbsp;</a>
                             </div>
                         </td>
@@ -73,6 +89,145 @@ else
                 }
             </tbody>
         </table>
-
     </div>
 }
+@{ProductDto productToPatch = new ProductDto();}
+
+@section Scripts{
+    <partial name="_ValidationScriptsPartial" />
+
+    
+    <script type="text/javascript">
+        var discountRate;
+        var id;
+        function openDiscountRateModal(obj) {
+            $('#discountRateModal').modal('show');
+            var product = JSON.parse(obj);
+            document.getElementById("discountRate").value = product.DiscountRate;
+            discountRate = product.DiscountRate;
+            document.getElementById("productId").value = product.Guid;
+            id = product.Guid;
+            document.getElementById("productName").innerHTML = product.Name;
+        }
+        function patch() {
+            window.location.href = "@Url.RouteUrl("/")" + 'Product/PatchProduct/' + id + '?discountRate=' + discountRate;
+        }
+        //function patch() {
+        //    document.getElementById("discountRate").value = ;
+        //}
+
+
+        //var discountRate = $('#discountRate').value;
+        //var discountUntil = 'new';
+
+
+        //$(".discountRateModal").click(function () {
+        //    $('#discountRateModal').modal('show');
+        //});
+
+        //$(".discountUntilModal").click(function () {
+        //    $('#discountUntilModal').modal('show');
+        //});
+
+    </script>
+}
+
+
+<style>
+    .discountRateModal:hover, .discountUntilModal:hover {
+        cursor: pointer;
+    }
+</style>
+
+<div class="modal fade" id="discountRateModal" tabindex="-1" aria-labelledby="discountRateModal" aria-hidden="true">
+    <div class="modal-dialog  modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title text-warning m-auto fw-bold" id="deleteModalLabel">
+                    Do you want to remove this Product ?
+                </h5>
+            </div>
+            <div class="modal-body">
+                <div class="container-fluid">
+                    <form method="post" asp-action="PatchProduct" asp-route-id="@productToPatch.Id"
+                          style="max-width: 40rem;" class="fw-bold row-cols-1 p-3">
+
+                        <input class="visible" id="productId" type="text" asp-for="@productToPatch.Id" disabled />
+
+                        <div class="col-auto mb-3  pb-4 m-auto">
+                            <h5 class="text-center fw-bold" id="productName" asp-for="@productToPatch.Name"></h5>
+                        </div>
+
+                        <div class=" col-5 mb-3 m-auto">
+                            <label asp-for="@productToPatch.DiscountRate">
+                                Set Discount&nbsp;&nbsp;&nbsp;<span class="text-danger form-label">%</span>
+                            </label>
+                            <input id="discountRate" onclick="change()" asp-for="@productToPatch.DiscountRate" type="number"
+                                   class="form-control text-danger fw-bold mt-2" min="1" max="99" />
+                            <span asp-validation-for="@productToPatch.DiscountRate" class="text-danger small"></span>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <div class="modal-footer border-top-0 row justify-content-evenly">
+                <button type="submit" onclick="patch()" id="patch"  class="btn btn-warning col-auto ">Patch</button>
+                <button type="button" class="btn btn-secondary col-auto " data-bs-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
+
+
+
+<div class="modal fade" id="discountUntilModal" tabindex="-1" aria-labelledby="discountUntilModal" aria-hidden="true">
+    <div class="modal-dialog  modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title text-warning m-auto fw-bold" id="deleteModalLabel">
+                    Do you want to remove this Product ?
+                </h5>
+                <!-- <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button> -->
+            </div>
+            <div class="modal-body">
+                <div class="container-fluid">
+                    <table class="table table-striped table-details m-0">
+                        <tbody class="border-2 border-secondary fw-bold text-center align-middle  ">
+                            <tr class="border-2">
+                                <th class="">Id</th>
+                                <td class="text-uppercase small">{{employeeToDelete.guid}}</td>
+                            </tr>
+                            <tr class="border-2">
+                                <th class="">Name</th>
+                                <td>{{getFullName(employeeToDelete)}}</td>
+                            </tr>
+
+                            <tr class="border-2">
+                                <th class="">Department</th>
+                                <td>{{employeeToDelete.department?.departmentName}}</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <p>openDiscountUntilModal</p>
+                    <div class=" col mb-3 m-auto">
+                        <label asp-for="@productToPatch.DiscountUntil">Discount until</label>
+                        <input asp-for="@productToPatch.DiscountUntil" type="date" value="@DateTime.Now.ToShortDateString()"
+                               class="form-control" min="1" max="99" />
+                        <span asp-validation-for="@productToPatch.DiscountUntil" class="text-danger"></span>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer border-top-0 row justify-content-evenly">
+                <button type="button" class="btn btn-secondary col-auto " data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-danger col-auto "
+                        (click)="deleteEmployee(employeeToDelete)">
+                    Confirm
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+
