--- a/ECommerceWithAuth.MVC/Views/Product/Index.cshtml
+++ b/ECommerceWithAuth.MVC/Views/Product/Index.cshtml
@@ -95,38 +95,47 @@ else
 
 @section Scripts{
     <partial name="_ValidationScriptsPartial" />
-
     
     <script type="text/javascript">
-        var discountRate;
         var id;
+        var discountRate;
+        var discountUntil;
+
         function openDiscountRateModal(obj) {
             $('#discountRateModal').modal('show');
             var product = JSON.parse(obj);
-            document.getElementById("discountRate").value = product.DiscountRate;
-            discountRate = product.DiscountRate;
-            document.getElementById("productId").value = product.Guid;
+
             id = product.Guid;
-            document.getElementById("productName").innerHTML = product.Name;
+            document.getElementById("productName-rateModal").innerHTML = product.Name;
+            document.getElementById("productId-rateModal").value = product.Guid;
+            document.getElementById("discountRate").value = product.DiscountRate;
+
+            discountRate = product.DiscountRate;
         }
-        function patch() {
-            window.location.href = "@Url.RouteUrl("/")" + 'Product/PatchProduct/' + id + '?discountRate=' + discountRate;
+
+        function patchDiscountRate() {
+        discountRate = document.getElementById("discountRate").value;
+        window.location.href = "@Url.RouteUrl("/")" + `Product/PatchProductDiscountRate/${id}?value=${discountRate}`
         }
-        //function patch() {
-        //    document.getElementById("discountRate").value = ;
-        //}
 
+        function openDiscountUntilModal(obj) {
+            $('#discountUntilModal').modal('show');
+            var product = JSON.parse(obj);
 
-        //var discountRate = $('#discountRate').value;
-        //var discountUntil = 'new';
+            id = product.Guid;
+            document.getElementById("productName-dateModal").innerHTML = product.Name;
+            document.getElementById("productId-dateModal").value = product.Guid;
+            document.getElementById("discountUntil").innerHTML = product.DiscountUntil.toString();
+        }
 
+        function patchDiscountDate() {
+            discountUntil = document.getElementById("discountUntil").value;
+            window.location.href = "@Url.RouteUrl("/")" + `Product/PatchProductDiscountUntil/${id}?value=${discountUntil}`
+        }
+            
 
         //$(".discountRateModal").click(function () {
         //    $('#discountRateModal').modal('show');
-        //});
-
-        //$(".discountUntilModal").click(function () {
-        //    $('#discountUntilModal').modal('show');
         //});
 
     </script>
@@ -144,7 +153,7 @@ else
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title text-warning m-auto fw-bold" id="deleteModalLabel">
-                    Do you want to remove this Product ?
+                    Set a discount rate for this product
                 </h5>
             </div>
             <div class="modal-body">
@@ -152,25 +161,25 @@ else
                     <form method="post" asp-action="PatchProduct" asp-route-id="@productToPatch.Id"
                           style="max-width: 40rem;" class="fw-bold row-cols-1 p-3">
 
-                        <input class="visible" id="productId" type="text" asp-for="@productToPatch.Id" disabled />
+                        <input class="invisible" id="productId-rateModal" type="text" asp-for="@productToPatch.Id" disabled />
 
-                        <div class="col-auto mb-3  pb-4 m-auto">
-                            <h5 class="text-center fw-bold" id="productName" asp-for="@productToPatch.Name"></h5>
+                        <div class="col-auto mb-3 pb-4 m-auto">
+                            <h5 class="text-center fw-bold text-primary" id="productName-rateModal" asp-for="@productToPatch.Name"></h5>
                         </div>
 
                         <div class=" col-5 mb-3 m-auto">
                             <label asp-for="@productToPatch.DiscountRate">
                                 Set Discount&nbsp;&nbsp;&nbsp;<span class="text-danger form-label">%</span>
                             </label>
-                            <input id="discountRate" onclick="change()" asp-for="@productToPatch.DiscountRate" type="number"
-                                   class="form-control text-danger fw-bold mt-2" min="1" max="99" />
+                            <input id="discountRate" asp-for="@productToPatch.DiscountRate" type="number"
+                                   class="form-control text-danger fw-bold mt-2 text-center" min="1" max="99" />
                             <span asp-validation-for="@productToPatch.DiscountRate" class="text-danger small"></span>
                         </div>
                     </form>
                 </div>
             </div>
             <div class="modal-footer border-top-0 row justify-content-evenly">
-                <button type="submit" onclick="patch()" id="patch"  class="btn btn-warning col-auto ">Patch</button>
+                <button type="submit" onclick="patchDiscountRate()" id="patch"  class="btn btn-warning col-auto ">Patch Discount</button>
                 <button type="button" class="btn btn-secondary col-auto " data-bs-dismiss="modal">Close</button>
             </div>
         </div>
@@ -178,54 +187,40 @@ else
 </div>
 
 
-
-
-
-
-
 <div class="modal fade" id="discountUntilModal" tabindex="-1" aria-labelledby="discountUntilModal" aria-hidden="true">
     <div class="modal-dialog  modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title text-warning m-auto fw-bold" id="deleteModalLabel">
-                    Do you want to remove this Product ?
+                    Set a date limit for the discount
                 </h5>
-                <!-- <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button> -->
             </div>
             <div class="modal-body">
                 <div class="container-fluid">
-                    <table class="table table-striped table-details m-0">
-                        <tbody class="border-2 border-secondary fw-bold text-center align-middle  ">
-                            <tr class="border-2">
-                                <th class="">Id</th>
-                                <td class="text-uppercase small">{{employeeToDelete.guid}}</td>
-                            </tr>
-                            <tr class="border-2">
-                                <th class="">Name</th>
-                                <td>{{getFullName(employeeToDelete)}}</td>
-                            </tr>
+                    <form method="post" asp-action="PatchProduct" asp-route-id="@productToPatch.Id"
+                          style="max-width: 40rem;" class="fw-bold row-cols-1 p-3">
 
-                            <tr class="border-2">
-                                <th class="">Department</th>
-                                <td>{{employeeToDelete.department?.departmentName}}</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                    <p>openDiscountUntilModal</p>
-                    <div class=" col mb-3 m-auto">
-                        <label asp-for="@productToPatch.DiscountUntil">Discount until</label>
-                        <input asp-for="@productToPatch.DiscountUntil" type="date" value="@DateTime.Now.ToShortDateString()"
-                               class="form-control" min="1" max="99" />
-                        <span asp-validation-for="@productToPatch.DiscountUntil" class="text-danger"></span>
-                    </div>
+                        <input class="invisible" id="productId-dateModal" type="text" asp-for="@productToPatch.Id" disabled />
+
+                        <div class="col-auto mb-3  pb-4 m-auto">
+                            <h5 class="text-center fw-bold text-primary" id="productName-dateModal" asp-for="@productToPatch.Name"></h5>
+                        </div>
+
+                        <div class="col-5 mb-3 m-auto">
+                            <label asp-for="@productToPatch.DiscountUntil" class="text-dark" >
+                                 Valid until:
+                            </label>
+                            <input id="discountUntil"  asp-for="@productToPatch.DiscountUntil" type="date"
+                                   min="2022-09-25" max="2100-09-13"
+                                   class="form-control text-danger fw-bold mt-2 text-center" required/>
+                            <span asp-validation-for="@productToPatch.DiscountUntil" class="text-danger small"></span>
+                        </div>
+                    </form>
                 </div>
             </div>
             <div class="modal-footer border-top-0 row justify-content-evenly">
+                <button type="submit" onclick="patchDiscountDate()" id="patch" class="btn btn-warning col-auto ">Patch Date</button>
                 <button type="button" class="btn btn-secondary col-auto " data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-danger col-auto "
-                        (click)="deleteEmployee(employeeToDelete)">
-                    Confirm
-                </button>
             </div>
         </div>
     </div>
