--- a/ECommerceWithAuth.MVC/Views/Product/UpdateProduct.cshtml
+++ b/ECommerceWithAuth.MVC/Views/Product/UpdateProduct.cshtml
@@ -22,7 +22,7 @@
                 </div>
 
                 <div class=" col-md-3 col-lg-2 mb-3 m-auto">
-                    <label asp-for="Price">Price</label>
+                    <label asp-for="Price">Price in SEK</label>
                     <input asp-for="Price" type="number" class="form-control text-primary fw-bold" min="1" />
                     <span asp-validation-for="Price" class="text-danger"></span>
                 </div>
