--- a/ECommerceWithAuth.MVC/Views/Shared/_Layout.cshtml
+++ b/ECommerceWithAuth.MVC/Views/Shared/_Layout.cshtml
@@ -27,7 +27,9 @@
                             </li>
                         }
 
-
+                        <li class="nav-item">
+                            <a class="nav-link navbar-brand text-white" asp-controller="Order" asp-action="Index">Orders</a>
+                        </li>
                     </ul>
                     <span class="text-white"><partial name="_LoginPartial" /></span>
                     
