--- a/ECommerceWithAuth.MVC/Views/Order/Index.cshtml
+++ b/ECommerceWithAuth.MVC/Views/Order/Index.cshtml
@@ -1,10 +1,14 @@
 ﻿@model (List<OrderDto> orders, Currency currency)
 
 
+@using Microsoft.Extensions.Configuration
+@inject IConfiguration Configuration
+@inject IOrderClientData _orderClientData
+
 @{
     ViewData["Title"] = "Orders";
 }
-
+<span id="apiLocation" class="d-none">@Configuration["ApiLocation"]</span>
 
 <div class="row pt-5 gy-5">
     <h3 class="text-secondary font-monospace fw-bold col-6">
@@ -12,16 +16,6 @@
         [<span class="text-primary opacity-75 small">@Model.orders?.Count</span>]
     </h3>
     <div class="start-0">
-
-        <script>
-            function sortOut() {
-                var select = document.getElementById('currency');
-                var currency = select.options[select.selectedIndex].value;
-
-                window.location.href = "@Url.RouteUrl("/")" + `Order?currency=${currency}`
-            }
-        </script>
-
         <select asp-for="@Model.currency" onchange="sortOut()" id="currency"
                 class="bg-white bg-opacity-100 text-success fw-bold border-2 rounded-pill form-select w-auto border-secondary shadow-sm">
             <option value="SEK">SEK</option>
@@ -35,15 +29,9 @@
             <option value="DKK">DKK</option>
         </select>
     </div>
-
 </div>
 
-
-@if (Model.orders is null)
-{
-    <em>Loading ......</em>
-}
-else if (Model.orders.Any() is false)
+@if (Model.orders!.Any() is false)
 {
     <h4>No Registered Order Was Returned From the Database</h4>
 }
@@ -63,29 +51,31 @@ else
                 </tr>
             </thead>
             <tbody class="border-1 border-dark">
-                @foreach (var Order in Model.orders)
+                @foreach (var order in Model.orders!)
                 {
                     <tr>
-                        <td class="col-3 fw-bold ">@Order.Customername()</td>
-                        <td class="col-3 fw-bold text-center">@Order.Address</td>
-                        <td class="col-2 text-secondary fw-bold bg-opacity-25">@Order.Phone</td>
+                        <td class="col-3 fw-bold" onclick="getCityValue('@order.City')">@order.Customername()</td>
+                        <td class="col-3 fw-bold text-center">@order.Address</td>
+                        <td class="col-2 text-secondary fw-bold bg-opacity-25">
+                            @order.Phone
+                        </td>
                         <td class="col-2 fw-bold">
                             <span class="btn-outline-warning link-primary rounded-pill p-lg-1 p-xl-2 distanceMatrix"
-                                  title="Check delivery time" style="cursor: pointer;" 
-                                  data-bs-toggle="modal" data-bs-target="#distanceMatrixModal">
-                                @Order.City
+                                  title="Check delivery time" style="cursor: pointer;" data-bs-toggle="modal"
+                                  data-bs-target="#distanceMatrixModal" onclick="requestDistanceMatrix('@order.City')">
+                                @order.City
                             </span>
                         </td>
                         <td class="col text-center me-3 ms-3 p-3">
                             <a class="text-light text-decoration-none btn btn-primary btn-outline-info m-2 p-2 pt-2 pb-2 rounded-3 fw-bold">
-                                @Order.OrderItems.Count
+                                @order.OrderItems.Count
                             </a>
                         </td>
                         <td class="col-1 ">
-                            <span class="ms-2 ps-2 font-monospace fw-bold">@($"{Order.TotalToPay:#.##}")</span>
+                            <span class="ms-2 ps-2 font-monospace fw-bold">@($"{order.TotalToPay:#.##}")</span>
                             <sub class="text-end me-0 pe-0 text-success" style="font-size:0.8rem;">@Model.currency</sub>
                         </td>
-                        <td class="col-1 fw-bold text-center">@Order.OrderPlaced</td>
+                        <td class="col-1 fw-bold text-center">@order.OrderPlaced</td>
                     </tr>
                 }
             </tbody>
@@ -93,56 +83,63 @@ else
     </div>
 }
 
-@section Scripts{ 
 
+@section Scripts{
     <script>
+        function sortOut() {
+            var select = document.getElementById('currency');
+            var currency = select.options[select.selectedIndex].value;
+            window.location.href = "@Url.RouteUrl("/")" + `Order?currency=${currency}`
+        }
 
-        function openDiscountRateModal() {
-            document.getElementById('distanceMatrixModal').modal('show');
-            
-            $('#distanceMatrixModal').modal('show');
+        async function requestDistanceMatrix(city) {
+        var apiLocation = document.getElementById('apiLocation').innerHTML;
+        var response = await fetch(`${apiLocation}/Order/DistanceMatrix/${city}`);
+        var jsonObj = await response.json();
+        var destination = jsonObj.destination;
+        var distance = jsonObj.distance;
+        var duration = jsonObj.duration;
+
+        document.getElementById('destination').innerHTML = destination;
+        document.getElementById('distance').innerHTML = distance;
+        document.getElementById('duration').innerHTML = duration;
+        }
 
     </script>
 }
-
-
 
 <div class="modal fade" id="distanceMatrixModal" tabindex="-1" aria-labelledby="distanceMatrixModal" aria-hidden="true">
     <div class="modal-dialog  modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title text-warning m-auto fw-bold" id="distanceModalLabel">Do you want to remove this employee ?</h5>
+                <h4 class="modal-title text-primary m-auto text-center" id="distanceModalLabel">
+                    Details received from Google Maps
+                </h4>
             </div>
-            <div class="modal-body">
+            <div class="modal-body mt-2 m-2 p-2" style="max-height:16vh;">
                 <div class="container-fluid">
                     <table class="table table-striped table-details m-0">
                         <tbody class="border-2 border-secondary fw-bold text-center align-middle  ">
-                            <tr class="border-2">
-                                <th class="">Id</th>
-                                
+                            <tr class="border-3 m-3">
+                                <th class="table-dark">Destination</th>
+                                <td id="destination"></td>
                             </tr>
-                            <tr class="border-2">
-                                <th class="">Name</th>
-                              
+                            <tr class="border-3">
+                                <th class="table-dark">Distance</th>
+                                <td id="distance"></td>
                             </tr>
-
-                            <tr class="border-2">
-                                <th class="">Department</th>
-                             
+                            <tr class="border-3">
+                                <th class="table-dark">Duration</th>
+                                <td id="duration"></td>
                             </tr>
                         </tbody>
                     </table>
                 </div>
             </div>
-            <div class="modal-footer border-top-0 row justify-content-evenly">
-                <button type="button" class="btn btn-secondary col-auto " data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-danger col-auto "
-                        >
-                    Confirm
-                </button>
+            <div class="modal-footer border-top-0 row justify-content-center p4 m-4 m-auto w-100 ">
+                <button type="button" class="btn btn-secondary col-2 p-2" data-bs-dismiss="modal">OK</button>
             </div>
         </div>
     </div>
 </div>
 
-@*Click 'Get distance' to calculate distance distanceMatrix      Get distance*@
