--- a/ECommerceWithAuth.MVC/Views/Product/UpdateProduct.cshtml
+++ b/ECommerceWithAuth.MVC/Views/Product/UpdateProduct.cshtml
@@ -35,7 +35,7 @@
 
                 <div class=" col-md-3 col-lg-2 mb-3 m-auto">
                     <label asp-for="DiscountRate">Set Discount&nbsp;&nbsp;&nbsp;<span class="text-danger">%</span> </label>
-                    <input asp-for="DiscountRate" type="number" class="form-control text-danger fw-bold" min="1" max="99"/>
+                    <input asp-for="DiscountRate" type="number" class="form-control text-danger fw-bold" min="1" max="99" />
                     <span asp-validation-for="DiscountRate" class="text-danger"></span>
                 </div>
 
@@ -75,5 +75,8 @@
 
 @section Scripts{
     <partial name="_ValidationScriptsPartial" />
+    <script>
+        $("input[type='date']").keydown(function (event) { event.preventDefault(); });
 
+    </script>
 }
