--- a/ECommerceWithAuth.MVC/Views/Product/AddProduct.cshtml
+++ b/ECommerceWithAuth.MVC/Views/Product/AddProduct.cshtml
@@ -7,9 +7,9 @@
 }
 
 <div style="max-width: 70rem; margin: 0 auto;">
-<h2 class="text-primary m-4 text-success">Add Product</h2>
+<h2 class="text-primary m-4 text-success fw-bold">Add Product</h2>
 
-    <form method="post" asp-action="AddProduct" class="mt-5 fw-bold">
+    <form method="post" asp-action="AddProduct" class="mt-3 fw-bold">
         <div class="row card card-body bg-light shadow-lg pb-3 ">
             <div class="row-cols-1 mb-4 w-100">
                 <div class="col-md-4 col-lg-4 mb-3 m-auto">
@@ -63,7 +63,7 @@
             <div class="w-100 mt-5 mb-5  text-center row justify-content-center">
                 <button type="submit" class="btn btn-success fw-bold m-3 col  col-lg-2 col-xl-2">Add Product</button>
                 <button type="reset" class="btn btn-secondary m-3 col  col-lg-2 col-xl-2">Reset</button>
-                <a asp-action="Index" class="btn btn-primary m-3 col col-lg-2 col-xl-2">Cancel</a>
+                <a asp-action="Index" class="btn btn-primary btn-outline-info text-white m-3 col col-lg-2 col-xl-2">Cancel</a>
             </div>
         </div>
     </form>
