--- a/ECommerceWithAuth.MVC/Views/Product/DeleteProduct.cshtml
+++ b/ECommerceWithAuth.MVC/Views/Product/DeleteProduct.cshtml
@@ -7,9 +7,9 @@
 }
 
 <div style="max-width: 70rem; margin: 0 auto;">
-    <h2 class="text-danger m-4 text-success">Delete Product</h2>
-    <div class="col-md-6 col-lg-4 mb-1 mt-5  fw-bold small text-primary">
-        <label asp-for="Guid">Customer Id</label>
+    <h2 class="text-danger m-4 text-success fw-bold text-center">Delete Product</h2>
+    <div class="col-md-6 col-lg-4 mb-1 mt-5 m-auto  fw-bold small text-primary">
+        <label asp-for="Guid">Product Id</label>
         <input asp-for="Guid" class="form-control fw-bold" style="text-transform: uppercase;" disabled/>
     </div>
     <form method="post" asp-action="DeleteProduct_Post" asp-route-id="@Model.Guid" class="fw-bold">
@@ -58,7 +58,7 @@
 
             <div class="w-100 mt-5 mb-5  text-center row justify-content-center">
                 <button type="submit" class="btn btn-danger fw-bold m-3 col  col-lg-2 col-xl-2">Delete Product</button>
-                <a asp-action="Index" class="btn btn-primary m-3 col col-lg-2 col-xl-2">Cancel</a>
+                <a asp-action="Index" class="btn btn-primary btn-outline-info text-white m-3 col col-lg-2 col-xl-2">Cancel</a>
             </div>
         </div>
     </form>
