--- a/ECommerceWithAuth.MVC/Views/Product/UpdateProduct.cshtml
+++ b/ECommerceWithAuth.MVC/Views/Product/UpdateProduct.cshtml
@@ -7,9 +7,9 @@
 }
 
 <div style="max-width: 70rem; margin: 0 auto;">
-    <h2 class="text-primary m-4 text-warning">Update Product</h2>
-    <div class="col-md-6 col-lg-4 mb-1 mt-5  fw-bold small text-primary">
-        <label asp-for="Guid">Customer Id</label>
+    <h2 class="text-primary m-4 text-warning fw-bold text-center">Update Product</h2>
+    <div class="col-md-6 col-lg-4 mb-1 mt-5  fw-bold small m-auto text-primary">
+        <label asp-for="Guid">Product Id</label>
         <input asp-for="Guid" class="form-control fw-bold" style="text-transform: uppercase;" disabled />
     </div>
     <form method="post" asp-action="UpdateProduct_Post" asp-route-id="@Model.Guid" class="fw-bold">
@@ -66,7 +66,7 @@
             <div class="w-100 mt-5 mb-5  text-center row justify-content-center">
                 <button type="submit" class="btn btn-warning fw-bold m-3 col col-lg-2 col-xl-2">Update Product</button>
                 <button type="reset" class="btn btn-secondary m-3 col  col-lg-2 col-xl-2">Reset</button>
-                <a asp-action="Index" class="btn btn-primary m-3 col col-lg-2 col-xl-2">Cancel</a>
+                <a asp-action="Index" class="btn btn-primary btn-outline-info text-white m-3 col col-lg-2 col-xl-2">Cancel</a>
             </div>
         </div>
     </form>
