--- a/ECommerceWithAuth.MVC/Views/Shared/_Layout.cshtml
+++ b/ECommerceWithAuth.MVC/Views/Shared/_Layout.cshtml
@@ -12,9 +12,10 @@
     <header class="mb-5">
         <nav style="background-color: rgb(56, 156, 78) !important;"
              class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid" >
+            <div class="container-fluid">
                 <a class="navbar-brand text-white" asp-area="" asp-controller="Home" asp-action="Index">E-Commerce</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
+                        data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -22,17 +23,20 @@
                     <ul class="navbar-nav flex-grow-1">
                         @if (true@*User?.Identity?.IsAuthenticated ?? false*@)
                         {
-                            <li class="nav-item">
-                                <a class="nav-link navbar-brand text-white" asp-controller="Product" asp-action="Index">Products</a>
-                            </li>
+                        <li class="nav-item">
+                            <a class="nav-link navbar-brand text-white" asp-controller="Product" asp-action="Index">Products</a>
+                        </li>
                         }
 
                         <li class="nav-item">
                             <a class="nav-link navbar-brand text-white" asp-controller="Order" asp-action="Index">Orders</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link navbar-brand text-white" asp-controller="Statistics" asp-action="Index">Statistics</a>
+                        </li>
                     </ul>
                     <span class="text-white"><partial name="_LoginPartial" /></span>
-                    
+
                 </div>
             </div>
         </nav>
@@ -44,9 +48,7 @@
     </div>
 
     <footer class="border-top footer text-muted" style="background-color: rgb(36, 143, 60);">
-        <div class="container text-white  ">
-            &copy; 2022 - E-Commerce By Nael
-        </div>
+        <div class="container text-white  ">&copy; 2022 - E-Commerce By Nael</div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
@@ -54,3 +56,6 @@
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
+
+<base href="~/" />
+<script src="_framework/blazor.server.js"></script>
